--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="RPG OF LEGENDS - An old school turned based RPG" />
+    <meta name="image" content="/src/assets/rpgThumbnail.png" >
     <title>RPG OF LEGENDS</title>
   </head>
   <body>
